# ShopProject

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  login.cpp  login.h  login.ui  main.cpp
custom_message_box/: custom_mesagge_box.cpp  custom_mesagge_box.h  custom_mesagge_box.ui
data/: books_database.csv  phones_database.csv  users_database.txt
doc/html/: annotated.html  book_8h.html  book_8h_source.html  class_book-members.html  class_book.html  class_item-members.html  class_item.html  class_login-members.html  class_login.html  class_phone-members.html  class_phone.html  class_sell_book_dialog-members.html  class_sell_book_dialog.html  class_sell_dialog-members.html  class_sell_dialog.html  class_shop-members.html  class_shop.html  class_shop_database-members.html  class_shop_database.html  class_sort_window-members.html  class_sort_window.html  class_ui_1_1_login-members.html  class_ui_1_1_login.html  class_ui_1_1_sell_book_dialog-members.html  class_ui_1_1_sell_book_dialog.html  class_ui_1_1_sell_dialog-members.html  class_ui_1_1_sell_dialog.html  class_ui_1_1_shop-members.html  class_ui_1_1_shop.html  class_ui_1_1_sort_window-members.html  class_ui_1_1_sort_window.html  class_ui_1_1_user_dialog-members.html  class_ui_1_1_user_dialog.html  class_ui___login-members.html  class_ui___login.html  class_ui___sell_book_dialog-members.html  class_ui___sell_book_dialog.html  class_ui___sell_dialog-members.html  class_ui___sell_dialog.html  class_ui___shop-members.html  (+113 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_1.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  files_5.js  files_6.js  files_7.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  searchdata.js
doc/latex/: annotated.tex  book_8h.tex  book_8h_source.tex  class_book.eps  class_book.tex  class_item.eps  class_item.tex  class_login.tex  class_phone.eps  class_phone.tex  class_sell_book_dialog.eps  class_sell_book_dialog.tex  class_sell_dialog.eps  class_sell_dialog.tex  class_shop.eps  class_shop.tex  class_shop_database.tex  class_sort_window.eps  class_sort_window.tex  class_ui_1_1_login.tex  class_ui_1_1_sell_book_dialog.eps  class_ui_1_1_sell_book_dialog.tex  class_ui_1_1_sell_dialog.eps  class_ui_1_1_sell_dialog.tex  class_ui_1_1_shop.eps  class_ui_1_1_shop.tex  class_ui_1_1_sort_window.eps  class_ui_1_1_sort_window.tex  class_ui_1_1_user_dialog.eps  class_ui_1_1_user_dialog.tex  class_ui___login.tex  class_ui___sell_book_dialog.eps  class_ui___sell_book_dialog.tex  class_ui___sell_dialog.eps  class_ui___sell_dialog.tex  class_ui___shop.eps  class_ui___shop.tex  class_ui___sort_window.eps  class_ui___sort_window.tex  class_ui___user_dialog.eps  (+52 more)
include/: book.h  database.h  exception.h  item.h  phone.h  user.h
login/: login.cpp  login.h
sell/: selldialog.cpp  selldialog.ui
sell/sell_book_dialog/: sellbookdialog.cpp  sellbookdialog.h  sellbookdialog.ui
sell/sell_phone_dialog/: selldialog.cpp  selldialog.h  selldialog.ui
shop/: shop.cpp  shop.h  shop.ui
sort_window/: sortwindow.cpp  sortwindow.h  sortwindow.ui
src/: book.cpp  database.cpp  item.cpp  phone.cpp  user.cpp
ui/login/: login.cpp  login.h  login.ui
ui/sell/sell_book_dialog/: sellbookdialog.cpp  sellbookdialog.h
ui/sell/sell_phone_dialog/: selldialog.cpp  selldialog.h
ui/shop/: shop.cpp  shop.h
ui/sort_window/: sortwindow.cpp  sortwindow.h
ui/user_profile/: user_dialog.cpp  user_dialog.h
user_profile/: user_dialog.cpp  user_dialog.h  user_dialog.ui
